--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -220,7 +220,7 @@
         list.push("P1-Villa-41,Monika Mittal,-8000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-42,Prakash Gaur,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-43,Arun Tripathi,-3000,2000,3000,3000,3000,,,,,"); 
-        list.push("P1-Villa-44,Ravindra Verma,-3000,2000,3000,3000,3000,,,,,"); 
+        list.push("P1-Villa-44,Ravindra Verma,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-45,Nand Singh Rajawat,-3000,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-46,Vikas Mahala,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-47,Manoj Ji,0,2000,3000,3000,3000,3000,,,,"); 
@@ -244,8 +244,8 @@
         list.push("P1-Villa-64,Sahil Meghnani, -3000,2000,3000,3000,3000,,,,,");
         list.push("P1-Villa-65,Jalaj Rajpurohit,0,2000,3000,3000,3000,3000,,,,");
         list.push("P1-Villa-66,Manju Gehlot,-6000,2000,3000,3000,,,,,,");
-        list.push("P1-Villa-67,Abhishek Jaiman,-3000,2000,3000,3000,3000,,,,,"); 
-        list.push("P1-Villa-68,Shrish Jaiman,-3000,2000,3000,3000,3000,,,,,"); 
+        list.push("P1-Villa-67,Abhishek Jaiman,0,2000,3000,3000,3000,3000,,,,"); 
+        list.push("P1-Villa-68,Shrish Jaiman,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-69,Piyush Sharma,-3000,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-70,Vineet Mahera,-3000,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-71,Suresh kumar Sharma,0,2000,3000,3000,3000,3000,,,,"); 
