--- a/MemberShip.html
+++ b/MemberShip.html
@@ -153,7 +153,7 @@ list.push("P1-Villa-01,Pooja Sharma,Pending");
         list.push("P1-Villa-10,Jogendra Sachdeva,Done"); 
         list.push("P1-Villa-11,Sundeep Mahala,Pending"); 
         list.push("P1-Villa-12,Gaurav Kothari,Done"); 
-        list.push("P1-Villa-13,Anil Sharma,Partially"); 
+        list.push("P1-Villa-13,Anil Sharma,Done"); 
         list.push("P1-Villa-14,Ayush	Shandilya,Pending"); 
         list.push("P1-Villa-15,Sunil	Kumar,Pending"); 
         list.push("P1-Villa-16,Preeti Meena,Pending"); 
@@ -161,14 +161,14 @@ list.push("P1-Villa-01,Pooja Sharma,Pending");
         list.push("P1-Villa-18,Pooja	Saxena,Partially"); 
         list.push("P1-Villa-19,Hitesh Sain,Partially"); 
         list.push("P1-Villa-20,Ved Prakash Parashar,Done"); 
-        list.push("P1-Villa-21,Dariya Singh,Partially"); 
+        list.push("P1-Villa-21,Dariya Singh,Done"); 
         list.push("P1-Villa-22,Shivani sanjeev sharma,Done"); 
         list.push("P1-Villa-23,Akshay Saraswat,Pending"); 
         list.push("P1-Villa-24,Abhimanyu Saraswat,Done"); 
         list.push("P1-Villa-25,Pooja Khandelwal,Pending"); 
         list.push("P1-Villa-26,Rakesh Kumar,Done"); 
         list.push("P1-Villa-27,Murari Sharma,Done"); 
-        list.push("P1-Villa-28,Mohit Juneja,Partially"); 
+        list.push("P1-Villa-28,Mohit Juneja,Done"); 
         list.push("P1-Villa-29,Lokshita Mathur,Pending"); 
         list.push("P1-Villa-30,Peeyush Mathur,Pending"); 
         list.push("P1-Villa-31,Mahesh Taparia,Pending"); 
@@ -182,25 +182,25 @@ list.push("P1-Villa-01,Pooja Sharma,Pending");
         list.push("P1-Villa-39,Manish Salvi,Done"); 
         list.push("P1-Villa-40,Anita Kanwar,Pending"); 
         list.push("P1-Villa-41,Monika Mittal,Pending"); 
-        list.push("P1-Villa-42,Prakash Gaur,Partially"); 
+        list.push("P1-Villa-42,Prakash Gaur,Done"); 
         list.push("P1-Villa-43,Arun Tripathi,Done"); 
         list.push("P1-Villa-44,Ravindra Verma,Partially"); 
-        list.push("P1-Villa-45,Nand Singh Rajawat,Partially"); 
-        list.push("P1-Villa-46,Vikas Mahala,Partially"); 
-        list.push("P1-Villa-47,Manoj Ji,Partially"); 
+        list.push("P1-Villa-45,Nand Singh Rajawat,Done"); 
+        list.push("P1-Villa-46,Vikas Mahala,Done"); 
+        list.push("P1-Villa-47,Manoj Ji,Done"); 
         list.push("P1-Villa-48,R C Sharma ,Done"); 
         list.push("P1-Villa-49,Sunita Verma,Pending"); 
-        list.push("P1-Villa-50,Abhishek Garg,Pending"); 
+        list.push("P1-Villa-50,Abhishek Garg,Done"); 
         list.push("P1-Villa-51,Jatin Kumar,Pending"); 
         list.push("P1-Villa-52,Shailesh Bansal,Done"); 
-        list.push("P1-Villa-53,Rohit Jain,Partially"); 
+        list.push("P1-Villa-53,Rohit Jain,Done"); 
         list.push("P1-Villa-54,Vinod Kumar Garg,Pending"); 
         list.push("P1-Villa-55,Raj Kamal,Pending"); 
         list.push("P1-Villa-56_57A,Kajor Mal Goyal,Pending"); 
-        list.push("P1-Villa-58_57B,Deepak Swaroop Garg,Partially"); 
+        list.push("P1-Villa-58_57B,Deepak Swaroop Garg,Done"); 
         list.push("P1-Villa-59,Pawan Jaiman,Partially"); 
         list.push("P1-Villa-60,Santra Devi,Pending"); 
-        list.push("P1-Villa-61,Divanshi Dhanjani,Partially"); 
+        list.push("P1-Villa-61,Divanshi Dhanjani,Done"); 
         list.push("P1-Villa-62,Lal Singh,Pending"); 
         list.push("P1-Villa-63,Yogesh Ji,Done"); 
         list.push("P1-Villa-64,Sahil Meghnani,Pending");
@@ -210,23 +210,23 @@ list.push("P1-Villa-01,Pooja Sharma,Pending");
         list.push("P1-Villa-68,Shrish Jaiman,Done"); 
         list.push("P1-Villa-69,Piyush Sharma,Done"); 
         list.push("P1-Villa-70,Vineet Sharma,Done"); 
-        list.push("P1-Villa-71,Suresh kumar Sharma,Partially"); 
+        list.push("P1-Villa-71,Suresh kumar Sharma,Done"); 
         list.push("P1-Villa-72,Nikesh Chaudhary,Partially"); 
         list.push("P1-Villa-73,Richa Sharma,Done"); 
         list.push("P1-Villa-74,Kanchan Anand,Pending"); 
         list.push("P1-Villa-75,Archna Goswami,Done"); 
         list.push("P1-Villa-76,Surya Nagal,Done"); 
-        list.push("P1-Villa-77,Devki Nandan Mathuriya,Partially"); 
+        list.push("P1-Villa-77,Devki Nandan Mathuriya,Done"); 
         list.push("P1-Villa-78,Akshat Mangal,Pending"); 
-        list.push("P1-Villa-79,Rahul Peswani,Partially"); 
-        list.push("P1-Villa-80,Rahul Peswani,Partially"); 
+        list.push("P1-Villa-79,Rahul Peswani,Done"); 
+        list.push("P1-Villa-80,Rahul Peswani,Done"); 
         list.push("P1-Villa-81,Mamta Sharma,Done"); 
         list.push("P1-Villa-82,Swati Bansal,Done"); 
         list.push("P1-Villa-83,Tarun Sharda,Pending"); 
         list.push("P1-Villa-84,Tarun Sharda,Pending"); 
-        list.push("P1-Villa-85,Pradeep Verma,Pending"); 
-        list.push("P1-Villa-86,Surendra Agrawal,Partially"); 
-        list.push("P1-Villa-87,Devendra Singh,Partially"); 
+        list.push("P1-Villa-85,Pradeep Verma,Done"); 
+        list.push("P1-Villa-86,Surendra Agrawal,Done"); 
+        list.push("P1-Villa-87,Devendra Singh,Done"); 
         list.push("P1-Villa-88,Pankaj Chauhan & Pushpa Tomar,Done"); 
         list.push("P1-Villa-89,Khem Chand Nagal,Pending"); 
         list.push("P1-Villa-90,Vivek Dubey,Pending"); 
@@ -235,16 +235,16 @@ list.push("P1-Villa-01,Pooja Sharma,Pending");
         list.push("P1-Villa-93,Manju Sexena,Pending"); 
         list.push("P1-Villa-94,Rounak Rajendra Bhatt,Pending"); 
         list.push("P1-Villa-95,Naresh Mathur,Done"); 
-        list.push("P1-Villa-96,George Pal Singh,Partially"); 
-        list.push("P1-Villa-97,Surendra Kumawat,Partially"); 
+        list.push("P1-Villa-96,George Pal Singh,Done"); 
+        list.push("P1-Villa-97,Surendra Kumawat,Done"); 
         list.push("P1-Villa-98,Hitesh Jain,Partially"); 
-        list.push("P1-Villa-99,Sakshi Singh,Partially"); 
+        list.push("P1-Villa-99,Sakshi Singh,Done"); 
         list.push("P1-Villa-100,Akansha Garg,Done"); 
         list.push("P1-Villa-101,Laxmi Agarwal,Pending"); 
-        list.push("P1-Villa-102,Pratima Singh,Partially"); 
+        list.push("P1-Villa-102,Pratima Singh,Done"); 
         list.push("P1-Villa-103,Ritika,Pending"); 
-        list.push("P1-Villa-104,Rajender Singh,Partially"); 
-        list.push("P1-Villa-105,kedar Singh,Partially"); 
+        list.push("P1-Villa-104,Rajender Singh,Done"); 
+        list.push("P1-Villa-105,kedar Singh,Done"); 
         list.push("P1-Villa-106,Vandana Soni,Done"); 
         list.push("P1-Villa-107,Rita Soni,Pending"); 
         list.push("P1-Villa-108,Shanky Munjal,Done"); 
