--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -189,7 +189,7 @@
         list.push("P1-Villa-10,Jogendra Sachdeva,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-11,Sundeep Mahala,-3000,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-12,Gaurav Kothari,0,2000,3000,3000,3000,3000,,,,"); 
-        list.push("P1-Villa-13,Anil Sharma,-3000,2000,3000,3000,3000,,,,,"); 
+        list.push("P1-Villa-13,Anil Sharma,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-14,Ayush   Shandilya,-6000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-15,Sunil   Kumar,-8000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-16,Preeti Meena,-8000,2000,2000,2000,,,,,,"); 
@@ -246,7 +246,7 @@
         list.push("P1-Villa-66,Manju Gehlot,-6000,2000,3000,3000,,,,,,");
         list.push("P1-Villa-67,Abhishek Jaiman,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-68,Shrish Jaiman,0,2000,3000,3000,3000,3000,,,,"); 
-        list.push("P1-Villa-69,Piyush Sharma,-3000,2000,3000,3000,3000,,,,,"); 
+        list.push("P1-Villa-69,Piyush Sharma,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-70,Vineet Mahera,-3000,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-71,Suresh kumar Sharma,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-72,Nikesh Chaudhary,-3000,2000,3000,3000,3000,,,,,"); 
@@ -258,7 +258,7 @@
         list.push("P1-Villa-78,Akshat Mangal,-14000,,,,,,,,,"); 
         list.push("P1-Villa-79,Rahul Peswani,-8500,2000,3000,500,,,,,,"); 
         list.push("P1-Villa-80,Rahul Peswani,-8500,2000,3000,500,,,,,,"); 
-        list.push("P1-Villa-81,Mamta Sharma,-3000,2000,3000,3000,3000,,,,,"); 
+        list.push("P1-Villa-81,Mamta Sharma,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-82,Swati Bansal,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-83,Tarun Sharda,-14000,,,,,,,,,"); 
         list.push("P1-Villa-84,Tarun Sharda,-14000,,,,,,,,,"); 
