--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -221,7 +221,7 @@
         list.push("P1-Villa-42,Prakash Gaur,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-43,Arun Tripathi,-3000,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-44,Ravindra Verma,0,2000,3000,3000,3000,3000,,,,"); 
-        list.push("P1-Villa-45,Nand Singh Rajawat,-3000,2000,3000,3000,3000,,,,,"); 
+        list.push("P1-Villa-45,Nand Singh Rajawat,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-46,Vikas Mahala,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-47,Manoj Ji,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-48,R C Sharma ,0,2000,3000,3000,3000,3000,3000,,,"); 
