--- a/index.html
+++ b/index.html
@@ -117,7 +117,6 @@
 	   
  --> 
 
- <p  style= "color:rgb(246, 58, 6)">Independence day: </p> <p  style= "color:rgb(10, 131, 20)">15 August, Flag hoisting at 9:00 AM.</p>
 
    	   
    <marquee  scrollamount="5" style= "color:rgb(5, 97, 27) ; font-size:20px" height="30px" > 
@@ -134,6 +133,7 @@
 <img class="NO-CACHE" data-src="img/Recipt.png" width="350px" heigt="250px" alt="" style="margin-bottom: 22px;">
 -->
 
+<img class="NO-CACHE" data-src="img/JA.jpg" width="250px" heigt="450px" alt="" style="margin-bottom: 22px;">
 <img class="NO-CACHE" data-src="img/Election.jpg" width="450px" heigt="350px" alt="" style="margin-bottom: 22px;">
 
 <img class="NO-CACHE" data-src="img/Aug_24_E.png" width="450px" heigt="650px" alt="" style="margin-bottom: 22px;">
