--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
 					<p style="color: rgb(151, 6, 83)">3.	Holi Milan: Combined Holi celebration </p>
 					<p style="color: rgb(6, 151, 38)">4.	Ramnavmi Chetra: decoration and panchamrat and dona prasadi</p>
 					<p style="color: rgb(6, 151, 38)">5.	Van mahotsav : Tree plantation by kids in colony aur near by area in First/Second week of July</p>
-					<p style="color: rgb(6, 151, 38)">6.	Janmashtami : Mandir decoration +Panchaarat and dona prasadi</p>
+					<p style="color: rgb(6, 151, 38)">6.	Janmashtami : Mandir decoration +Panchamarat and dona prasadi</p>
 					<p style="color: rgb(6, 151, 38)">7.	Independence day: Flag hoisting and laddu distribution</p>
 					<p style="color: rgb(6, 151, 38)">8.	Ganesh Chaturthi : Ganesh Sthapna for 1 day and visarjan with DJ</p>
 					<p style="color: rgb(6, 151, 38)">9.	Ram Mandir sthapna diwas celebration</p>
