--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -280,11 +280,11 @@
         list.push("P1-Villa-100,Akansha Garg,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-101,Laxmi Agarwal,-14000,,,,,,,,,"); 
         list.push("P1-Villa-102,Pratima Singh,0,2000,3000,3000,3000,3000,,,,"); 
-        list.push("P1-Villa-103,Ritika,-14000,,,,,,,,,"); 
+        list.push("P1-Villa-103,Ritika,-11000,2000,1000,,,,,,,"); 
         list.push("P1-Villa-104,Rajender Singh,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-105,Kedar Singh,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-106,Vandana Soni,0,0,0,3000,3000,3000,,,,"); 
-        list.push("P1-Villa-107,Rita Soni,-3000,0,0,3000,3000,,,,,"); 
+        list.push("P1-Villa-107,Rita Soni,0,0,0,3000,3000,3000,,,,"); 
         list.push("P1-Villa-108,Shanky Munjal,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-109,Satish Kumar,-14000,,,,,,,,,"); 
         list.push("P1-Villa-110,Deepika Sharma,-14000,,,,,,,,,"); 
