--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -190,7 +190,7 @@
         list.push("P1-Villa-11,Sundeep Mahala,-3000,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-12,Gaurav Kothari,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-13,Anil Sharma,0,2000,3000,3000,3000,3000,,,,"); 
-        list.push("P1-Villa-14,Ayush   Shandilya,-6000,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-14,Ayush   Shandilya,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-15,Sunil   Kumar,-8000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-16,Preeti Meena,-8000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-17,khushi Khandelwal,-8000,2000,2000,2000,,,,,,"); 
@@ -216,8 +216,8 @@
         list.push("P1-Villa-37,Gajendra Sharma,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-38,ManishaSingh,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-39,Manish Salvi,0,2000,3000,3000,3000,3000,,,,"); 
-        list.push("P1-Villa-40,Anita Kanwar,-3000,0,3000,3000,3000,,,,,"); 
-        list.push("P1-Villa-41,Monika Mittal,-6000,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-40,Anita Kanwar,0,0,3000,3000,3000,3000,,,,"); 
+        list.push("P1-Villa-41,Monika Mittal,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-42,Prakash Gaur,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-43,Arun Tripathi,-3000,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-44,Ravindra Verma,0,2000,3000,3000,3000,3000,,,,"); 
