--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -230,7 +230,7 @@
         list.push("P1-Villa-51,Jatin Kumar,-8000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-52,Shailesh Bansal,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-53,Rohit Jain,0,2000,3000,3000,3000,3000,3000,,,"); 
-        list.push("P1-Villa-54,Vinod Kumar Garg,-3000,2000,3000,3000,3000,,,,,"); 
+        list.push("P1-Villa-54,Vinod Kumar Garg,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-55,Raj Kamal,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-56_57A,Kajor Mal Goyal,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-58_57B,Deepak Swaroop Garg,0,2000,3000,3000,3000,3000,3000,,,"); 
@@ -280,7 +280,7 @@
         list.push("P1-Villa-100,Akansha Garg,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-101,Laxmi Agarwal,-14000,,,,,,,,,"); 
         list.push("P1-Villa-102,Pratima Singh,0,2000,3000,3000,3000,3000,,,,"); 
-        list.push("P1-Villa-103,Ritika,-11000,2000,1000,,,,,,,"); 
+        list.push("P1-Villa-103,Ritika,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-104,Rajender Singh,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-105,Kedar Singh,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-106,Vandana Soni,0,0,0,3000,3000,3000,,,,"); 
