--- a/MemberShip.html
+++ b/MemberShip.html
@@ -157,7 +157,7 @@ list.push("P1-Villa-01,Pooja Sharma,Pending");
         list.push("P1-Villa-14,Ayush	Shandilya,Pending"); 
         list.push("P1-Villa-15,Sunil	Kumar,Pending"); 
         list.push("P1-Villa-16,Preeti Meena,Pending"); 
-        list.push("P1-Villa-17,khushi Khandelwal,Pending"); 
+        list.push("P1-Villa-17,khushi Khandelwal,Done"); 
         list.push("P1-Villa-18,Pooja	Saxena,Partially"); 
         list.push("P1-Villa-19,Hitesh Sain,Partially"); 
         list.push("P1-Villa-20,Ved Prakash Parashar,Partially"); 
