--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -193,7 +193,7 @@
         list.push("P1-Villa-14,Ayush   Shandilya,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-15,Sunil   Kumar,-8000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-16,Preeti Meena,-8000,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-17,khushi Khandelwal,-8000,2000,2000,2000,,,,,,"); 
+        list.push("P1-Villa-17,khushi Khandelwal,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-18,Pooja   Saxena,-6000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-19,Hitesh Sain,-8000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-20,Ved Prakash Parashar,0,2000,3000,3000,3000,3000,,,,"); 
@@ -256,8 +256,8 @@
         list.push("P1-Villa-76,Surya Nagal,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-77,Devki Nandan Mathuriya,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-78,Akshat Mangal,-14000,,,,,,,,,"); 
-        list.push("P1-Villa-79,Rahul Peswani,-8500,2000,3000,500,,,,,,"); 
-        list.push("P1-Villa-80,Rahul Peswani,-8500,2000,3000,500,,,,,,"); 
+        list.push("P1-Villa-79,Rahul Peswani,0,2000,3000,3000,3000,3000,3000,500,,"); 
+        list.push("P1-Villa-80,Rahul Peswani,0,2000,3000,3000,3000,3000,3000,500,,"); 
         list.push("P1-Villa-81,Mamta Sharma,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-82,Swati Bansal,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-83,Tarun Sharda,-14000,,,,,,,,,"); 
