--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -256,8 +256,9 @@
         list.push("P1-Villa-76,Surya Nagal,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-77,Devki Nandan Mathuriya,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-78,Akshat Mangal,-14000,,,,,,,,,"); 
-        list.push("P1-Villa-79,Rahul Peswani,0,2000,3000,3000,3000,3000,3000,500,,"); 
-        list.push("P1-Villa-80,Rahul Peswani,0,2000,3000,3000,3000,3000,3000,500,,"); 
+        list.push("P1-Villa-79,Rahul Peswani,-8500,2000,3000,500,,,,,,"); 
+        list.push("P1-Villa-80,Rahul Peswani,-8500,2000,3000,500,,,,,,"); 
+
         list.push("P1-Villa-81,Mamta Sharma,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-82,Swati Bansal,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-83,Tarun Sharda,-14000,,,,,,,,,"); 
@@ -266,8 +267,8 @@
         list.push("P1-Villa-86,Surendra Agrawal,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-87,Devendra Singh,-3300,2000,3000,3000,2700,,,,,"); 
         list.push("P1-Villa-88,Pankaj Chauhan & Pushpa Tomar,0,2000,3000,3000,3000,3000,,,,"); 
-        list.push("P1-Villa-89,Khem Chand Nagal,-14000,,,,,,,,,"); 
-        list.push("P1-Villa-90,Vivek Dubey,-14000,,,,,,,,,"); 
+        list.push("P1-Villa-89,Khem Chand Nagal,0,0,3000,3000,3000,3000,,,,"); 
+        list.push("P1-Villa-90,Vivek Dubey,0,0,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-91,Rajendra Prasad Gupta,-14000,,,,,,,,,"); 
         list.push("P1-Villa-92,Anil Kumar Gupta,-14000,,,,,,,,,"); 
         list.push("P1-Villa-93,Manju Sexena,-14000,,,,,,,,,"); 
