--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -219,7 +219,7 @@
         list.push("P1-Villa-40,Anita Kanwar,0,0,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-41,Monika Mittal,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-42,Prakash Gaur,0,2000,3000,3000,3000,3000,3000,,,"); 
-        list.push("P1-Villa-43,Arun Tripathi,-3000,2000,3000,3000,3000,,,,,"); 
+        list.push("P1-Villa-43,Arun Tripathi,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-44,Ravindra Verma,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-45,Nand Singh Rajawat,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-46,Vikas Mahala,0,2000,3000,3000,3000,3000,,,,"); 
