--- a/MonthlyCreditDebit.html
+++ b/MonthlyCreditDebit.html
@@ -190,6 +190,7 @@
         list.push("P1 Previous balance,Account,30674,C");
         //list.push("P1 Quarterly Collection ,Villa 65,1000,C");
         list.push("P1 15 August,Account,-2280,D");
+        list.push("P1 Janmashtami celebration, Account,-15051,D");
         
         
          generateTable(list)
