--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -181,7 +181,7 @@
 
      list.push("P1-Villa-01,Pooja Sharma,0,2000,3000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-04,Bhupesh Saini,0,2000,3000,3000,3000,3000,3000,,,"); 
-        list.push("P1-Villa-05,Shishir Maltiyar,-6000,2000,3000,3000,3000,,,,,"); 
+        list.push("P1-Villa-05,Shishir Maltiyar,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-06,Hemant Kumar,-11000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-07,Rahul Pandey,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-08,Anil Sharma,-11000,2000,2000,2000,,,,,,"); 
@@ -241,7 +241,7 @@
 
         list.push("P1-Villa-62,Lal Singh,-17000,,,,,,,,,"); 
         list.push("P1-Villa-63,Yogesh Ji,0,2000,3000,3000,3000,3000,3000,,,"); 
-        list.push("P1-Villa-64,Sahil Meghnani, 0,2000,3000,3000,3000,3000,3000,,,");
+        list.push("P1-Villa-64,Sahil Meghnani,0,2000,3000,3000,3000,3000,3000,,,");
         list.push("P1-Villa-65,Jalaj Rajpurohit,0,2000,3000,3000,3000,3000,3000,,,");
         list.push("P1-Villa-66,Manju Gehlot,-9000,2000,3000,3000,,,,,,");
         list.push("P1-Villa-67,Abhishek Jaiman,0,2000,3000,3000,3000,3000,3000,,,"); 
