--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -190,8 +190,8 @@
         list.push("P1-Villa-11,Sundeep Mahala,-6000,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-12,Gaurav Kothari,-3000,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-13,Anil Sharma,0,2000,3000,3000,3000,3000,3000,,,"); 
-        list.push("P1-Villa-14,Ayush   Shandilya,-3000,2000,3000,3000,3000,3000,,,,"); 
-        list.push("P1-Villa-15,Sunil   Kumar,-11000,2000,2000,2000,,,,,,"); 
+        list.push("P1-Villa-14,Ayush Shandilya,-3000,2000,3000,3000,3000,3000,,,,"); 
+        list.push("P1-Villa-15,Sunil Kumar,-11000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-16,Preeti Meena,-11000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-17,khushi Khandelwal,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-18,Pooja   Saxena,-9000,2000,3000,3000,,,,,,"); 
@@ -222,7 +222,7 @@
         list.push("P1-Villa-43,Arun Tripathi,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-44,Ravindra Verma,-3000,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-45,Nand Singh Rajawat,0,2000,3000,3000,3000,3000,3000,,,"); 
-        list.push("P1-Villa-46,Vikas Mahala,-3000,2000,3000,3000,3000,3000,,,,"); 
+        list.push("P1-Villa-46,Vikas Mahala,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-47,Manoj Ji,-3000,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-48,R C Sharma ,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-49,Sunita Verma,-11000,2000,2000,2000,,,,,,"); 
