--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -216,7 +216,7 @@
         list.push("P1-Villa-37,Gajendra Sharma,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-38,ManishaSingh,-3000,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-39,Manish Salvi,0,2000,3000,3000,3000,3000,3000,,,"); 
-        list.push("P1-Villa-40,Anita Kanwar,-3000,0,3000,3000,3000,3000,,,,"); 
+        list.push("P1-Villa-40,Anita Kanwar,0,0,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-41,Monika Mittal,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-42,Prakash Gaur,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-43,Arun Tripathi,0,2000,3000,3000,3000,3000,3000,,,"); 
