--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -194,7 +194,7 @@
         list.push("P1-Villa-15,Sunil Kumar,-11000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-16,Preeti Meena,-11000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-17,khushi Khandelwal,0,2000,3000,3000,3000,3000,3000,,,"); 
-        list.push("P1-Villa-18,Pooja   Saxena,-9000,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-18,Pooja   Saxena,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-19,Hitesh Sain,-11000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-20,Ved Prakash Parashar,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-21,Dariya Singh,-9000,2000,3000,3000,,,,,,"); 
