--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
  <marquee  scrollamount="5" style= "color:rgb(216, 21, 132) ; font-size:20px" height="30px" > 
 	
 	
-	<h4><span style="color:rgb(155, 5, 75)">On APP details are updated till </span> <span style="color:blue">  08 Sep 2024, 11:35 AM </span> </h4>
+	<h4><span style="color:rgb(155, 5, 75)">On APP details are updated till </span> <span style="color:blue">  08 Sep 2024, 05:00 PM </span> </h4>
 	
 </marquee>
 
