--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -197,13 +197,13 @@
         list.push("P1-Villa-18,Pooja   Saxena,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-19,Hitesh Sain,-11000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-20,Ved Prakash Parashar,0,2000,3000,3000,3000,3000,3000,,,"); 
-        list.push("P1-Villa-21,Dariya Singh,-9000,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-21,Dariya Singh,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-22,Shivani sanjeev sharma,0,2000,3000,3000,3000,3000,3000,,,");
         list.push("P1-Villa-23,Akshay Saraswat,0,0,0,0,0,0,3000,,,");  
         list.push("P1-Villa-24,Abhimanyu Saraswat,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-25,Pooja Khandelwal,-17000,,,,,,,,,"); 
         list.push("P1-Villa-26,Rakesh Kumar,0,2000,3000,3000,3000,3000,3000,,,"); 
-        list.push("P1-Villa-27,Murari Sharma,-9000,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-27,Murari Sharma,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-28,Mohit Juneja,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-29,Lokshita Mathur,0,0,0,0,,,,,,"); 
         list.push("P1-Villa-30,Peeyush Mathur,0,0,0,0,,,,,,");   
@@ -236,7 +236,7 @@
         list.push("P1-Villa-58_57B,Deepak Swaroop Garg,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-59,Pawan Jaiman,0,0,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-60,Santra Devi,-17000,,,,,,,,,"); 
-        list.push("P1-Villa-61,Divanshi Dhanjani,-3000,2000,3000,3000,3000,3000,,,,"); 
+        list.push("P1-Villa-61,Divanshi Dhanjani,0,2000,3000,3000,3000,3000,3000,,,"); 
 
 
         list.push("P1-Villa-62,Lal Singh,-17000,,,,,,,,,"); 
@@ -259,7 +259,7 @@
         list.push("P1-Villa-79,Rahul Peswani,-11500,2000,3000,500,,,,,,"); 
         list.push("P1-Villa-80,Rahul Peswani,-11500,2000,3000,500,,,,,,"); 
 
-        list.push("P1-Villa-81,Mamta Sharma,-3000,2000,3000,3000,3000,3000,,,,"); 
+        list.push("P1-Villa-81,Mamta Sharma,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-82,Swati Bansal,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-83,Tarun Sharda,-17000,,,,,,,,,"); 
         list.push("P1-Villa-84,Tarun Sharda,-17000,,,,,,,,,"); 
