--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -220,7 +220,7 @@
         list.push("P1-Villa-41,Monika Mittal,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-42,Prakash Gaur,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-43,Arun Tripathi,0,2000,3000,3000,3000,3000,3000,,,"); 
-        list.push("P1-Villa-44,Ravindra Verma,-3000,2000,3000,3000,3000,3000,,,,"); 
+        list.push("P1-Villa-44,Ravindra Verma,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-45,Nand Singh Rajawat,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-46,Vikas Mahala,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-47,Manoj Ji,-3000,2000,3000,3000,3000,3000,,,,"); 
@@ -263,7 +263,7 @@
         list.push("P1-Villa-82,Swati Bansal,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-83,Tarun Sharda,-17000,,,,,,,,,"); 
         list.push("P1-Villa-84,Tarun Sharda,-17000,,,,,,,,,"); 
-        list.push("P1-Villa-85,Pradeep Verma,-3300,2000,3000,3000,3000,2700,,,,"); 
+        list.push("P1-Villa-85,Pradeep Verma,-300,2000,3000,3000,3000,3000,2700,,,"); 
         list.push("P1-Villa-86,Priyanka & Surendra Agrawal,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-87,Devendra Singh,-6300,2000,3000,3000,2700,,,,,"); 
         list.push("P1-Villa-88,Pankaj Chauhan & Pushpa Tomar,0,2000,3000,3000,3000,3000,3000,,,"); 
@@ -273,7 +273,7 @@
         list.push("P1-Villa-92,Anil Kumar Gupta,-17000,,,,,,,,,"); 
         list.push("P1-Villa-93,Manju Sexena,-17000,,,,,,,,,"); 
         list.push("P1-Villa-94,Rounak Rajendra Bhatt,-17000,,,,,,,,,"); 
-        list.push("P1-Villa-95,Naresh Mathur,-6000,0,3000,3000,3000,,,,,"); 
+        list.push("P1-Villa-95,Naresh Mathur,0,0,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-96,George Pal Singh,0,2000,3000,3000,3000,3000,3000,,,");
         list.push("P1-Villa-97,Surendra Kumawat,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-98,Hitesh Jain,-3000,2000,3000,3000,3000,3000,,,,"); 
