--- a/index.html
+++ b/index.html
@@ -122,9 +122,12 @@
  <marquee  scrollamount="5" style= "color:rgb(216, 21, 132) ; font-size:20px" height="30px" > 
 	
 	
-	<h4><span style="color:rgb(155, 5, 75)">On APP details are updated till </span> <span style="color:blue">  10 Sep 2024, 09:30 PM </span> </h4>
+	<h4><span style="color:rgb(155, 5, 75)">On APP details are updated till </span> <span style="color:blue">  11 Sep 2024, 06:00 AM </span> </h4>
 	
 </marquee>
+
+<p style= "color:rgb(10, 131, 20)">Till 10 September 2024, missed to pay maintenance amount villa owners list. if any correction required please update in group or at feedback section of App. </p>
+<img class="NO-CACHE" data-src="img/Pending_10Sep24.jpg" width="445px" heigt="407px" alt="" style="margin-bottom: 22px;">
 
 <!--
    	   
